# akimbo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  main.cc  test.cc
akimbo/: CMakeLists.txt  Core.cc  Core.hh  Debug.hh  Entity.cc  EventHandler.cc  EventHandler.hh  Font.cc  Font.hh  Frame.cc  Frame.hh  KeyboardState.hh  Makefile  Matrix4.hh  Mesh.cc  Mesh.hh  Render.cc  Render.hh  Renderer2D.cc  Shader.cc  Shader.hh  Texture.cc  Texture.hh  TextureAtlas.cc  TextureAtlas.hh  Transform.cc  Transform.hh  Vector2.cc  Vector2.hh  Vector3.hh  View.hh  Window.cc  Window.hh
akimbo/include/akimbo/: Core.hh  Entity.hh  EntityProperty.hh  Main.hh  RenderTarget.hh  RenderTarget2D.hh  Renderer.hh  Renderer2D.hh  Vector2.hh  (+4 more)
akimbo/shaders/: test.fs  test.vs  test2.fs  texture.fs
akimbo/task/: Task.cc
akimbo/ui/: Button.cc  Button.hh  Console.cc  Console.hh  Constraint.cc  Constraint.hh  Container.cc  Container.hh  Label.cc  Label.hh  Logger.cc  Logger.hh  Switch.cc  Switch.hh  TabbedContainer.cc  TabbedContainer.hh  TextInput.cc  TextInput.hh  Widget.cc  Widget.hh
examples/: input.md  render.md  update.md
examples/ui/: uiBasics.cc  uiLogger.cc  uiSwitch.cc
include/akimbo/: Core.hh  CoreEvent.hh  Font.hh  Module.hh  Renderer.hh  Renderer2D.hh  Texture.hh  Vector2.hh  Window.hh  WindowContent.hh
libakimbo/: CMakeLists.txt  Core.cc  Entity.cc  Main.cc  Property.cc  RenderTarget.cc  Renderer2D.cc  UpdatingEntity.cc  View.cc  Window.cc
libakimbo/ui/: Root.cc
platform/SDL2/: CMakeLists.txt  Renderer2D.cc  Window.cc
resources/shaders/: atlas.vs  color.fs  text.fs
source/: Core.cc  Module.cc  Renderer.cc  Window.cc
source/SDL/: FontDetail.cc  Renderer2D.cc  TextureDetail.cc  Window.cc
source/ui/: Button.cc  Container.cc  ScrollContainer.cc  SplitContainer.cc  TabbedContainer.cc  Widget.cc
ui/: CMakeLists.txt  Layout.cc  Root.cc  ScrollLayout.cc  SplitLayout.cc  TabLayout.cc  Toggle.cc  Widget.cc  WidgetRenderer.cc
(+42 files in other folders)
